# sql-query-build

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  test-converter.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  window.rs
src-tauri/src/commands/: database_structure.rs  export_commands.rs  join_suggestions.rs  mod.rs  mutation_commands.rs  query.rs  query_analyzer.rs  query_history_commands.rs  query_storage_commands.rs  safety.rs  security.rs  settings.rs  sql_editor.rs  window.rs
src-tauri/src/connection/: builder.rs  collection.rs  commands.rs  connection_test_service.rs  error.rs  frontend_types.rs  mod.rs  service.rs  storage.rs  tests.rs  types.rs
src-tauri/src/crypto/: encryption.rs  error.rs  mod.rs  password_cache.rs  types.rs
src-tauri/src/crypto/master_key/: error.rs  keychain.rs  manager.rs  mod.rs  types.rs
src-tauri/src/crypto/security_provider/: config.rs  credential_storage.rs  error.rs  keychain.rs  manager.rs  master_password.rs  mod.rs  password_validator.rs  provider_switcher.rs  simple.rs  simple_key.rs  traits.rs  types.rs
src-tauri/src/database/: mod.rs  mysql_executor.rs  mysql_inspector.rs  postgresql_executor.rs  postgresql_inspector.rs  sqlite_executor.rs  sqlite_inspector.rs
src-tauri/src/models/: database_structure.rs  database_structure_test.rs  export.rs  expression_node.rs  join_suggestion.rs  mod.rs  mutation_result.rs  query.rs  query_analysis.rs  query_history.rs  query_result.rs  safety_settings.rs  saved_query.rs  sql_editor_history.rs  sql_editor_query.rs  window.rs  window_test.rs
src-tauri/src/query/: mutation.rs
src-tauri/src/services/: database_inspector.rs  database_inspector_test.rs  exporter.rs  join_suggestion_engine.rs  mod.rs  query_analyzer.rs  query_analyzer_test.rs  query_executor.rs  query_executor_test.rs  query_history.rs  query_storage.rs  safety_config.rs  safety_config_test.rs  sql_editor_history.rs  sql_editor_query_storage.rs  window_manager.rs
src-tauri/src/sql/: dialect_mapper.rs  expression_builder.rs  expression_builder_test.rs  mod.rs
src-tauri/src/sql_generator/: builder.rs  dialect.rs  mod.rs  reserved_words.rs  tests.rs
src-tauri/src/sql_generator/clause/: from.rs  group_by.rs  join.rs  limit.rs  mod.rs  order_by.rs  select.rs  where_clause.rs
src-tauri/src/sql_generator/dialects/: mod.rs  mysql.rs  (+2 more)
src-tauri/src/storage/: error.rs  file_storage.rs  mod.rs  path_manager.rs  window_state.rs
src-tauri/src/utils/: folder_validation.rs  mod.rs
src-tauri/src/validators/: expression_validator.rs  mod.rs  subquery_validator.rs
src-tauri/tests/: integration_persistence.rs  window_manager_tests.rs
(+775 files in other folders)
