[package]
name = "sql-query-build"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sql_query_build_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.52"
csv = "1.3"
rust_xlsxwriter = "0.75"

# 非同期トレイト用
async-trait = "0.1"

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# データベースドライバ（SQLx）
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid"] }

# 暗号化・セキュリティ
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
base64 = "0.21"
hostname = "0.3"
whoami = "1.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# ストレージモジュール用
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"
dirs = "5.0"

# 接続情報データモデル用
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
tokio-util = "0.7.17"

[dev-dependencies]
# テスト用一時ファイル・ディレクトリ作成
tempfile = "3.0"
